# xyris-redux

./: .gitignore  .gitmodules  .scuba.yml  AGENTS.md  CMakeLists.txt  README.md  build.sh  xyris.code-workspace
.aiassistant/rules/: ReadAgents.md
CMake/Common/: InitializeStandardFlags.cmake
CMake/Modules/: InitializeFreestandingFlags.cmake  InitializeStandardFlags.cmake
CMake/Toolchains/: amd64-buildroot-generic.cmake
Docker/: Dockerfile  build-binutils.sh  build-common.sh  build-gcc.sh  build-gdb.sh
Meta/: build.sh  common.sh  launch.sh
Modules/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
Modules/CMake/Modules/: InitializeEmbeddedSwift.cmake  InitializeFreestandingFlags.cmake
Modules/CMake/Scripts/: CreateKernelImages.cmake  CreateModuleImages.cmake
Modules/CMake/Toolchains/: amd64-buildroot-generic.cmake
Modules/Kernel/: CMakeLists.txt  Entry.cpp  Kernel.ld  Linker.ld
Modules/Kernel/Arch/: Arch.cpp  Arch.hpp  CMakeLists.txt  GDT.asm  GDT.cpp  GDT.hpp  IDT.asm  IDT.cpp  IDT.hpp  ISR.asm  Interrupts.cpp  Interrupts.hpp  PIC.cpp  PIC.hpp  Ports.cpp  Ports.hpp
Modules/Kernel/Arch/amd64/: Arch.cpp  CMakeLists.txt
Modules/Kernel/Arch/amd64/CPU/: GDT.hpp
Modules/Kernel/Arch/amd64/Devices/: PIC.cpp  PIC.hpp
Modules/Kernel/Arch/amd64/IO/: Ports.cpp  Ports.hpp
Modules/Kernel/Arch/amd64/Interrupts/: IDT.cpp  IDT.hpp  ISR.asm  Interrupts.cpp
Modules/Kernel/Arch/include/Arch/: Arch.hpp
Modules/Kernel/Swift/: CMakeLists.txt  KernelSwift.swift  TargetProbe.swift
Modules/Kernel/Swift/include/: SwiftBridge.h  module.modulemap
Modules/Loader/: CMakeLists.txt  Entry.cpp  Entry.hpp  Linker.ld  limine.cfg
Modules/Loader/include/: Entry.hpp
Modules/Loader/include/Loader/: Entry.hpp
Modules/Runtime/: CMakeLists.txt  HaltAndCatchFire.cpp  Memory.cpp  StackProtector.cpp
Modules/Runtime/include/: HaltAndCatchFire.hpp  Memory.hpp  StackProtector.hpp
Modules/Tools/: CMakeLists.txt
Toolchain/: Dockerfile  build-binutils.sh  build-common.sh  build-gcc.sh  build-gdb.sh  build-toolchain.sh
Tools/: .gitignore  CMakeLists.txt  HexDump.hpp
Tools/VerifyGDT/: CMakeLists.txt  HexDump.hpp  main.cpp
